plugins {
    id 'application'
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.vaadin' version '24.5.10'
}

group = 'org.rsinitsyn'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '21'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://maven.vaadin.com/vaadin-addons' }
}

ext {
    set('vaadinVersion', "24.5.10")
    isProd = System.getenv('VAADIN_MODE') == 'prod'
}

dependencies {
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'com.vaadin:vaadin-spring-boot-starter'
    implementation 'org.postgresql:postgresql'
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.google.guava:guava:30.1.1-jre'

    // Monitoring
    implementation 'io.micrometer:micrometer-tracing'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Addons Vaadin
    implementation 'com.github.umjammer:jlayer:1.0.2'
    implementation 'com.flowingcode.addons.carousel:carousel-addon:2.1.1'
    // Voice recognizer
    implementation 'org.vaadin.addons.pandalyte:voice-recognition:1.0.2'
    // Video player
//    implementation 'com.brownie.videojs:video-js-player:1.0.9'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
    imports {
        mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
    }
}

vaadin {
    if (isProd) {
        print('Prod mode in gradle')
        productionMode = true
        forceProductionBuild = true
    }
}

application {
    applicationDefaultJvmArgs = [
            '-Xms1000m',
            '-Xmx2048m',
            '-XX:+UseG1GC',
            '-Xlog:gc*:file=logs/gc.log:time,uptime,level,tags',
            '-XX:MetaspaceSize=128m',
            '-XX:MaxMetaspaceSize=256m',
            '-Dfile.encoding=UTF-8',
            '-XX:+HeapDumpOnOutOfMemoryError',
            '-XX:HeapDumpPath=./heapdump.hprof',
    ]
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootJar') {
    if (isProd) {
        dependsOn 'vaadinBuildFrontend'
    }
}
